# nucleus-language

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  LICENSE  README.md  appveyor.yml
documentation/: create_context_destroy_context.md  dl-specification-2018-03-17.md  index.md  roadmap.md  string.md
documentation/DL/: Context_create.md  Context_destroy.md  StringBuffer_getBytes.md  StringBuffer_getCapacity.md  StringBuffer_getSize.md
interpreter/: CMakeLists.txt
interpreter/documentation/: ArithmeticOperations.html  LexicalSpecification.html  Nucleus_Interpreter_GC.md  Nucleus_Interpreter_TypesSystem.md  PreliminaryDefinitions.html  RelationalOperations.html  TypesAndValues.html
interpreter/test/: CMakeLists.txt
interpreter/test/Context/: CMakeLists.txt
interpreter/test/Context/src/Nucleus.Interpreter.Test.Context/: main.c
interpreter/test/ScratchSpace/: CMakeLists.txt
interpreter/test/ScratchSpace/src/Nucleus.Interpreter.Test.ScratchSpace/: main.c
interpreter/test/String/: CMakeLists.txt
interpreter/test/String/src/Nucleus.Interpreter.Test.String/: main.c
interpreter/test/StringBuffer/: CMakeLists.txt
interpreter/test/StringBuffer/src/Nucleus.Interpreter.Test.StringBuffer/: main.c
interpreter/test/StringIterator/: CMakeLists.txt
interpreter/test/StringIterator/src/Nucleus.Interpreter.Test.StringIterator/: main.c
interpreter/test/getFileContents/: CMakeLists.txt
interpreter/test/getFileContents/src/Nucleus.Interpreter.Test.getFileContents/: main.c
interpreter/test/setFileContents/: CMakeLists.txt
interpreter/test/setFileContents/src/Nucleus.Interpreter.Test.setFileContents/: main.c
interpreter/test/stringToInteger/: CMakeLists.txt
interpreter/test/stringToInteger/src/Nucleus.Interpreter.Test.stringToInteger/: main.c
interpreter/tools/: CMakeLists.txt
interpreter/tools/Generator/: CMakeLists.txt
interpreter/tools/Generator/src/Nucleus/Interpreter/Tools/Generator/: Main.c  Types.i
interpreter/tools/Unicode/: CMakeLists.txt
interpreter/tools/Unicode/src/Nucleus/Language/Tools/Unicode/: CodePoints.i  Main.c
language/: CMakeLists.txt
language/test/: CMakeLists.txt
language/test/Context/: CMakeLists.txt
language/test/Context/src/Nucleus/Language/Test/Context/: main.c
language/test/ScratchSpace/: CMakeLists.txt
language/test/ScratchSpace/src/Nucleus/Language/Test/ScratchSpace/: main.c
language/test/String/: CMakeLists.txt
language/test/String/src/Nucleus/Language/Test/String/: main.c
language/test/StringBuffer/: CMakeLists.txt
language/test/StringBuffer/src/Nucleus/Language/Test/StringBuffer/: main.c
language/test/StringIterator/: CMakeLists.txt
language/test/StringIterator/src/Nucleus/Language/Test/StringIterator/: main.c
language/test/getFileContents/: CMakeLists.txt
language/test/getFileContents/src/Nucleus/Language/Test/getFileContents/: main.c
language/test/setFileContents/: CMakeLists.txt
language/test/setFileContents/src/Nucleus/Language/Test/setFileContents/: main.c
language/tools/: CMakeLists.txt
language/tools/Unicode/: CMakeLists.txt
language/tools/Unicode/src/Nucleus/Language/Tools/Unicode/: CodePoints.i  Main.c
test/: CMakeLists.txt
test/LineMap/: CMakeLists.txt
test/LineMap/data/: realLiterals.txt
test/LineMap/src/Nucleus.DataLanguage.Test.LineMap/: main.c
test/Parser/: CMakeLists.txt
test/Parser/data/: emptyStructure.txt  nonEmptyStructure.txt
test/Parser/src/Nucleus/DataLanguage/Test/Parser/: main.c
test/Scanner/: CMakeLists.txt
test/Scanner/src/Nucleus.DataLanguage.Test.Scanner/: main.c
test/Source/: CMakeLists.txt
test/Source/src/Nucleus.DataLanguage.Test.Source/: main.c
test/SourceIterator/: CMakeLists.txt
test/SourceIterator/src/Nucleus.DataLanguage.Test.SourceIterator/: main.c
test/context/: CMakeLists.txt
test/context/src/dl/test/context/: main.c
test/getfilecontents/: CMakeLists.txt
test/getfilecontents/src/dl/test/getfilecontents/: main.c
test/parser/: CMakeLists.txt
test/parser/src/Nucleus/DataLanguage/Test/Parser/: main.c
test/scanner/: CMakeLists.txt
test/scanner/src/Nucleus/DataLanguage/Test/Scanner/: main.c
test/scratchspace/: CMakeLists.txt
test/scratchspace/src/dl/test/scratchspace/: main.c
test/string/: CMakeLists.txt
test/string/src/dl/test/string/: main.c
test/stringbuffer/: CMakeLists.txt
test/stringbuffer/src/dl/test/stringbuffer/: main.c
